replaced combo text to dishes text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           src="https://food-website-asadbekme.vercel.app/images/cat-1.png"
           alt="category image 1"
         />
-        <h3 class="category__title">Combo</h3>
+        <h3 class="category__title">Dishes</h3>
       </div>
       <div class="category__card">
         <img
